@startuml
package SystemService
{
    class NVSManager
    {
    }
}
package Data
{
    class NetworkCredentials
    {
        - m_ssid: String
        - m_psk: String

        + NetworkCredentials(ssid: String, psk: String)
        + NetworkCredentials()
        + ~NetworkCredentials()
        + getSSID(): String
        + setSSID(ssid: String): void
        + getPSK(): String
        + setPSK(psk: String): void
        + serialize(): String
        + deserialize(serial: String): bool
    }

    class Store
    {
        - m_nvsmgr: NVSManager
        - m_netCredentials: NetworkCredentials

        - Store()
        - ~Store()
        {static} + getInstance(): Store&
        + save(): bool
        + load(): bool
        + getNetworkCredentials(): NetworkCredentials
        + setNetworkCredentials(credentials: NetworkCredentials): void
    }
    Store "0..*" *--> "1" NVSManager
    Store "0..*" *--> "1" NetworkCredentials
}
@enduml